// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`leave details page does not render LeaveDetails if absenceDetails not given 1`] = `null`;

exports[`leave details page does renders page separated by keys if object of absenceDetails has more keys 1`] = `
Array [
  <div
    className="border-bottom border-base-lighter margin-bottom-2 padding-bottom-2"
    key="medical"
  >
    <Heading
      level="2"
    >
      pages.claimsStatus.leaveReasonValue
    </Heading>
    <div
      className="margin-top-2"
      key="PL-14432-0000002026"
    >
      <Heading
        className="margin-bottom-1"
        level="3"
      >
        Reduced leave
      </Heading>
      <p>
        From June 1, 2021 to June 8, 2021
      </p>
      <Tag
        label="Approved"
        paddingSm={true}
        state="success"
      />
      <Trans
        components={
          Object {
            "application-link": <a
              href="/applications/get-ready"
            />,
            "notice-link": <a
              href="#view_notices"
            />,
            "request-appeal-link": <a
              href="https://www.mass.gov/how-to/appealing-a-denied-paid-family-or-medical-leave-claim"
            />,
          }
        }
        i18nKey="pages.claimsStatus.leaveStatusMessage"
        tOptions={
          Object {
            "context": "Approved",
          }
        }
      />
    </div>
    <div
      className="margin-top-2"
      key="PL-14432-0000002326"
    >
      <Heading
        className="margin-bottom-1"
        level="3"
      >
        Continuous leave
      </Heading>
      <p>
        From July 1, 2021 to July 8, 2021
      </p>
      <Tag
        label="Pending"
        paddingSm={true}
        state="pending"
      />
      <Trans
        components={
          Object {
            "application-link": <a
              href="/applications/get-ready"
            />,
            "notice-link": <a
              href="#view_notices"
            />,
            "request-appeal-link": <a
              href="https://www.mass.gov/how-to/appealing-a-denied-paid-family-or-medical-leave-claim"
            />,
          }
        }
        i18nKey="pages.claimsStatus.leaveStatusMessage"
        tOptions={
          Object {
            "context": "Pending",
          }
        }
      />
    </div>
  </div>,
  <div
    className="border-bottom border-base-lighter margin-bottom-2 padding-bottom-2"
    key="bonding"
  >
    <Heading
      level="2"
    >
      pages.claimsStatus.leaveReasonValue
    </Heading>
    <div
      className="margin-top-2"
      key="PL-14434-0000002026"
    >
      <Heading
        className="margin-bottom-1"
        level="3"
      >
        Reduced leave
      </Heading>
      <p>
        From August 1, 2021 to August 8, 2021
      </p>
      <Tag
        label="Denied"
        paddingSm={true}
        state="error"
      />
      <Trans
        components={
          Object {
            "application-link": <a
              href="/applications/get-ready"
            />,
            "notice-link": <a
              href="#view_notices"
            />,
            "request-appeal-link": <a
              href="https://www.mass.gov/how-to/appealing-a-denied-paid-family-or-medical-leave-claim"
            />,
          }
        }
        i18nKey="pages.claimsStatus.leaveStatusMessage"
        tOptions={
          Object {
            "context": "Denied",
          }
        }
      />
    </div>
    <div
      className="margin-top-2"
      key="PL-14434-0000002326"
    >
      <Heading
        className="margin-bottom-1"
        level="3"
      >
        Continuous leave
      </Heading>
      <p>
        From August 1, 2021 to August 8, 2021
      </p>
      <Tag
        label="Withdrawn"
        paddingSm={true}
        state="inactive"
      />
      <Trans
        components={
          Object {
            "application-link": <a
              href="/applications/get-ready"
            />,
            "notice-link": <a
              href="#view_notices"
            />,
            "request-appeal-link": <a
              href="https://www.mass.gov/how-to/appealing-a-denied-paid-family-or-medical-leave-claim"
            />,
          }
        }
        i18nKey="pages.claimsStatus.leaveStatusMessage"
        tOptions={
          Object {
            "context": "Withdrawn",
          }
        }
      />
    </div>
  </div>,
]
`;

exports[`leave details page does renders page with one section if absenceDetails has only one key 1`] = `
<div
  className="border-bottom border-base-lighter margin-bottom-2 padding-bottom-2"
  key="medical"
>
  <Heading
    level="2"
  >
    pages.claimsStatus.leaveReasonValue
  </Heading>
  <div
    className="margin-top-2"
    key="PL-14432-0000002026"
  >
    <Heading
      className="margin-bottom-1"
      level="3"
    >
      Reduced leave
    </Heading>
    <p>
      From June 1, 2021 to June 8, 2021
    </p>
    <Tag
      label="Approved"
      paddingSm={true}
      state="success"
    />
    <Trans
      components={
        Object {
          "application-link": <a
            href="/applications/get-ready"
          />,
          "notice-link": <a
            href="#view_notices"
          />,
          "request-appeal-link": <a
            href="https://www.mass.gov/how-to/appealing-a-denied-paid-family-or-medical-leave-claim"
          />,
        }
      }
      i18nKey="pages.claimsStatus.leaveStatusMessage"
      tOptions={
        Object {
          "context": "Approved",
        }
      }
    />
  </div>
  <div
    className="margin-top-2"
    key="PL-14432-0000002326"
  >
    <Heading
      className="margin-bottom-1"
      level="3"
    >
      Continuous leave
    </Heading>
    <p>
      From July 1, 2021 to July 8, 2021
    </p>
    <Tag
      label="Pending"
      paddingSm={true}
      state="pending"
    />
    <Trans
      components={
        Object {
          "application-link": <a
            href="/applications/get-ready"
          />,
          "notice-link": <a
            href="#view_notices"
          />,
          "request-appeal-link": <a
            href="https://www.mass.gov/how-to/appealing-a-denied-paid-family-or-medical-leave-claim"
          />,
        }
      }
      i18nKey="pages.claimsStatus.leaveStatusMessage"
      tOptions={
        Object {
          "context": "Pending",
        }
      }
    />
  </div>
</div>
`;

exports[`status page displays an error if feature flag is disabled 1`] = `
<Fragment>
  <Alert
    className="margin-bottom-3"
    data-test="info-alert"
    heading="If you gave birth, you may be eligible for paid medical leave"
    headingLevel="2"
    headingSize="4"
    noIcon={true}
    state="info"
  >
    <Trans
      components={
        Object {
          "about-bonding-leave-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#about-family-leave-to-bond-with-a-child-"
            rel="noreferrer noopener"
            target="_blank"
          />,
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
        }
      }
      i18nKey="pages.claimsStatus.infoAlertBody"
      tOptions={
        Object {
          "context": "bonding",
        }
      }
    />
  </Alert>
  <BackButton
    href="/applications"
    label="Back to your applications"
  />
  <div
    className="measure-6"
  >
    <Title
      small={true}
      weight="normal"
    >
      Application details
    </Title>
    <Heading
      level="2"
      size="1"
    >
      Leave Reason
    </Heading>
    <div
      className="display-flex border-base-lighter margin-bottom-3 bg-base-lightest padding-2"
    >
      <div
        className="padding-right-10"
      >
        <Heading
          level="2"
          size="4"
          weight="normal"
        >
          Application ID
        </Heading>
        <p
          className="text-bold"
        >
          Fineos-Absence-ID
        </p>
      </div>
      <div>
        <Heading
          level="2"
          size="4"
          weight="normal"
        >
          Employer Identification Number (EIN)
        </Heading>
        <p
          className="text-bold"
        >
          123456789
        </p>
      </div>
    </div>
    <LeaveDetails
      absenceDetails={
        Object {
          "Child Bonding": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002026",
              "period_type": "Reduced",
              "reason": "Child Bonding",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Denied",
            },
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002326",
              "period_type": "Continuous",
              "reason": "Child Bonding",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Withdrawn",
            },
          ],
          "Serious Health Condition - Employee": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-06-08",
              "absence_period_start_date": "2021-06-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002026",
              "period_type": "Reduced",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Approved",
            },
            AbsencePeriod {
              "absence_period_end_date": "2021-07-08",
              "absence_period_start_date": "2021-07-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002326",
              "period_type": "Continuous",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Pending",
            },
          ],
        }
      }
    />
    <ViewYourNotices />
    <div
      className="border-top border-base-lighter padding-top-2"
    >
      <Heading
        level="2"
      >
        Upload Documents
      </Heading>
      <Heading
        level="3"
      >
        Respond to requests for information
      </Heading>
      <p>
        If you have a request for more information, use this to upload the requested documentation.
      </p>
      <ButtonLink
        className="measure-6 margin-bottom-3"
        href="/applications/upload-docs-options?claim_id=65184a9e-f938-40b6-b0f6-25f416a4c113"
      >
        Upload additional documents
      </ButtonLink>
    </div>
    <div
      className="border-top border-base-lighter padding-top-2"
    >
      <Heading
        level="2"
      >
        Manage your application
      </Heading>
      <Heading
        level="3"
      >
        Make changes to your application
      </Heading>
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344‑7365"
            />,
          }
        }
        i18nKey="pages.claimsStatus.makeChangesBody"
      />
      <Heading
        level="3"
      >
        Report other benefits or income
      </Heading>
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344‑7365"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsStatus.reportOtherBenefitsBody"
      />
    </div>
  </div>
</Fragment>
`;

exports[`status page does not render LeaveDetails if absenceDetails not given 1`] = `
<Fragment>
  <BackButton
    href="/applications"
    label="Back to your applications"
  />
  <div
    className="measure-6"
  >
    <Title
      small={true}
      weight="normal"
    >
      Application details
    </Title>
    <Heading
      level="2"
      size="1"
    >
      Leave Reason
    </Heading>
    <div
      className="display-flex border-base-lighter margin-bottom-3 bg-base-lightest padding-2"
    >
      <div
        className="padding-right-10"
      >
        <Heading
          level="2"
          size="4"
          weight="normal"
        >
          Application ID
        </Heading>
        <p
          className="text-bold"
        >
          Fineos-Absence-ID
        </p>
      </div>
      <div>
        <Heading
          level="2"
          size="4"
          weight="normal"
        >
          Employer Identification Number (EIN)
        </Heading>
        <p
          className="text-bold"
        >
          123456789
        </p>
      </div>
    </div>
    <LeaveDetails
      absenceDetails={Object {}}
    />
    <ViewYourNotices />
    <div
      className="border-top border-base-lighter padding-top-2"
    >
      <Heading
        level="2"
      >
        Upload Documents
      </Heading>
      <Heading
        level="3"
      >
        Respond to requests for information
      </Heading>
      <p>
        If you have a request for more information, use this to upload the requested documentation.
      </p>
      <ButtonLink
        className="measure-6 margin-bottom-3"
        href="/applications/upload-docs-options?claim_id=65184a9e-f938-40b6-b0f6-25f416a4c113"
      >
        Upload additional documents
      </ButtonLink>
    </div>
    <div
      className="border-top border-base-lighter padding-top-2"
    >
      <Heading
        level="2"
      >
        Manage your application
      </Heading>
      <Heading
        level="3"
      >
        Make changes to your application
      </Heading>
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344‑7365"
            />,
          }
        }
        i18nKey="pages.claimsStatus.makeChangesBody"
      />
      <Heading
        level="3"
      >
        Report other benefits or income
      </Heading>
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344‑7365"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsStatus.reportOtherBenefitsBody"
      />
    </div>
  </div>
</Fragment>
`;

exports[`status page does not render ViewYourNotices if documents not given 1`] = `
<Fragment>
  <Alert
    className="margin-bottom-3"
    data-test="info-alert"
    heading="If you gave birth, you may be eligible for paid medical leave"
    headingLevel="2"
    headingSize="4"
    noIcon={true}
    state="info"
  >
    <Trans
      components={
        Object {
          "about-bonding-leave-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#about-family-leave-to-bond-with-a-child-"
            rel="noreferrer noopener"
            target="_blank"
          />,
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
        }
      }
      i18nKey="pages.claimsStatus.infoAlertBody"
      tOptions={
        Object {
          "context": "bonding",
        }
      }
    />
  </Alert>
  <BackButton
    href="/applications"
    label="Back to your applications"
  />
  <div
    className="measure-6"
  >
    <Title
      small={true}
      weight="normal"
    >
      Application details
    </Title>
    <Heading
      level="2"
      size="1"
    >
      Leave Reason
    </Heading>
    <div
      className="display-flex border-base-lighter margin-bottom-3 bg-base-lightest padding-2"
    >
      <div
        className="padding-right-10"
      >
        <Heading
          level="2"
          size="4"
          weight="normal"
        >
          Application ID
        </Heading>
        <p
          className="text-bold"
        >
          Fineos-Absence-ID
        </p>
      </div>
      <div>
        <Heading
          level="2"
          size="4"
          weight="normal"
        >
          Employer Identification Number (EIN)
        </Heading>
        <p
          className="text-bold"
        >
          123456789
        </p>
      </div>
    </div>
    <LeaveDetails
      absenceDetails={
        Object {
          "Child Bonding": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002026",
              "period_type": "Reduced",
              "reason": "Child Bonding",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Denied",
            },
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002326",
              "period_type": "Continuous",
              "reason": "Child Bonding",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Withdrawn",
            },
          ],
          "Serious Health Condition - Employee": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-06-08",
              "absence_period_start_date": "2021-06-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002026",
              "period_type": "Reduced",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Approved",
            },
            AbsencePeriod {
              "absence_period_end_date": "2021-07-08",
              "absence_period_start_date": "2021-07-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002326",
              "period_type": "Continuous",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Pending",
            },
          ],
        }
      }
    />
    <ViewYourNotices />
    <div
      className="border-top border-base-lighter padding-top-2"
    >
      <Heading
        level="2"
      >
        Upload Documents
      </Heading>
      <Heading
        level="3"
      >
        Respond to requests for information
      </Heading>
      <p>
        If you have a request for more information, use this to upload the requested documentation.
      </p>
      <ButtonLink
        className="measure-6 margin-bottom-3"
        href="/applications/upload-docs-options?claim_id=65184a9e-f938-40b6-b0f6-25f416a4c113"
      >
        Upload additional documents
      </ButtonLink>
    </div>
    <div
      className="border-top border-base-lighter padding-top-2"
    >
      <Heading
        level="2"
      >
        Manage your application
      </Heading>
      <Heading
        level="3"
      >
        Make changes to your application
      </Heading>
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344‑7365"
            />,
          }
        }
        i18nKey="pages.claimsStatus.makeChangesBody"
      />
      <Heading
        level="3"
      >
        Report other benefits or income
      </Heading>
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344‑7365"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsStatus.reportOtherBenefitsBody"
      />
    </div>
  </div>
</Fragment>
`;

exports[`status page includes a button to upload additional documents 1`] = `
<Fragment>
  <Alert
    className="margin-bottom-3"
    data-test="info-alert"
    heading="If you gave birth, you may be eligible for paid medical leave"
    headingLevel="2"
    headingSize="4"
    noIcon={true}
    state="info"
  >
    <Trans
      components={
        Object {
          "about-bonding-leave-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#about-family-leave-to-bond-with-a-child-"
            rel="noreferrer noopener"
            target="_blank"
          />,
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
        }
      }
      i18nKey="pages.claimsStatus.infoAlertBody"
      tOptions={
        Object {
          "context": "bonding",
        }
      }
    />
  </Alert>
  <BackButton
    href="/applications"
    label="Back to your applications"
  />
  <div
    className="measure-6"
  >
    <Title
      small={true}
      weight="normal"
    >
      Application details
    </Title>
    <Heading
      level="2"
      size="1"
    >
      Leave Reason
    </Heading>
    <div
      className="display-flex border-base-lighter margin-bottom-3 bg-base-lightest padding-2"
    >
      <div
        className="padding-right-10"
      >
        <Heading
          level="2"
          size="4"
          weight="normal"
        >
          Application ID
        </Heading>
        <p
          className="text-bold"
        >
          Fineos-Absence-ID
        </p>
      </div>
      <div>
        <Heading
          level="2"
          size="4"
          weight="normal"
        >
          Employer Identification Number (EIN)
        </Heading>
        <p
          className="text-bold"
        >
          123456789
        </p>
      </div>
    </div>
    <LeaveDetails
      absenceDetails={
        Object {
          "Child Bonding": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002026",
              "period_type": "Reduced",
              "reason": "Child Bonding",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Denied",
            },
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002326",
              "period_type": "Continuous",
              "reason": "Child Bonding",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Withdrawn",
            },
          ],
          "Serious Health Condition - Employee": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-06-08",
              "absence_period_start_date": "2021-06-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002026",
              "period_type": "Reduced",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Approved",
            },
            AbsencePeriod {
              "absence_period_end_date": "2021-07-08",
              "absence_period_start_date": "2021-07-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002326",
              "period_type": "Continuous",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Pending",
            },
          ],
        }
      }
    />
    <ViewYourNotices />
    <div
      className="border-top border-base-lighter padding-top-2"
    >
      <Heading
        level="2"
      >
        Upload Documents
      </Heading>
      <Heading
        level="3"
      >
        Respond to requests for information
      </Heading>
      <p>
        If you have a request for more information, use this to upload the requested documentation.
      </p>
      <ButtonLink
        className="measure-6 margin-bottom-3"
        href="/applications/upload-docs-options?claim_id=65184a9e-f938-40b6-b0f6-25f416a4c113"
      >
        Upload additional documents
      </ButtonLink>
    </div>
    <div
      className="border-top border-base-lighter padding-top-2"
    >
      <Heading
        level="2"
      >
        Manage your application
      </Heading>
      <Heading
        level="3"
      >
        Make changes to your application
      </Heading>
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344‑7365"
            />,
          }
        }
        i18nKey="pages.claimsStatus.makeChangesBody"
      />
      <Heading
        level="3"
      >
        Report other benefits or income
      </Heading>
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344‑7365"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsStatus.reportOtherBenefitsBody"
      />
    </div>
  </div>
</Fragment>
`;

exports[`status page info alert displays if claimant has bonding but not pregnancy claims 1`] = `
<div
  className="usa-alert usa-alert--info usa-alert--no-icon margin-bottom-3"
  tabIndex="-1"
>
  <div
    className="usa-alert__body"
    role="region"
  >
    <Heading
      className="usa-alert__heading"
      level="2"
      size="4"
    >
      If you gave birth, you may be eligible for paid medical leave
    </Heading>
    <div
      className="usa-alert__text"
    >
      <Trans
        components={
          Object {
            "about-bonding-leave-link": <a
              href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#about-family-leave-to-bond-with-a-child-"
              rel="noreferrer noopener"
              target="_blank"
            />,
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
          }
        }
        i18nKey="pages.claimsStatus.infoAlertBody"
        tOptions={
          Object {
            "context": "bonding",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`status page info alert displays if claimant has bonding but not pregnancy claims 2`] = `
Array [
  "You can take up to 20 weeks of paid medical leave if you’re unable to work during your pregnancy and to recover from childbirth. Your health care provider determines how much medical leave you will need. Call the Contact Center at ",
  <a
    href="tel:(833) 344-7365"
    key="1"
  >
    (833) 344‑7365
  </a>,
  " if you need ",
  <a
    href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#about-family-leave-to-bond-with-a-child-"
    key="3"
    rel="noreferrer noopener"
    target="_blank"
  >
    medical leave after giving birth.
  </a>,
]
`;

exports[`status page info alert displays if claimant has pregnancy but not bonding claims 1`] = `
<div
  className="usa-alert usa-alert--info usa-alert--no-icon margin-bottom-3"
  tabIndex="-1"
>
  <div
    className="usa-alert__body"
    role="region"
  >
    <Heading
      className="usa-alert__heading"
      level="2"
      size="4"
    >
      You may also be eligible for paid family leave
    </Heading>
    <div
      className="usa-alert__text"
    >
      <Trans
        components={
          Object {
            "about-bonding-leave-link": <a
              href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#about-family-leave-to-bond-with-a-child-"
              rel="noreferrer noopener"
              target="_blank"
            />,
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
          }
        }
        i18nKey="pages.claimsStatus.infoAlertBody"
        tOptions={
          Object {
            "context": "pregnancy",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`status page info alert displays if claimant has pregnancy but not bonding claims 2`] = `
Array [
  "You can take up to 12 weeks of paid family leave to bond with your child after your medical leave ends. ",
  <a
    href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#about-family-leave-to-bond-with-a-child-"
    key="1"
    rel="noreferrer noopener"
    target="_blank"
  >
    Family leave to bond with your child
  </a>,
  " can be easily added to your claim by calling our Contact Center at ",
  <a
    href="tel:(833) 344-7365"
    key="3"
  >
    (833) 344‑7365
  </a>,
  ".",
]
`;

exports[`status page renders the page 1`] = `
<Fragment>
  <Alert
    className="margin-bottom-3"
    data-test="info-alert"
    heading="If you gave birth, you may be eligible for paid medical leave"
    headingLevel="2"
    headingSize="4"
    noIcon={true}
    state="info"
  >
    <Trans
      components={
        Object {
          "about-bonding-leave-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#about-family-leave-to-bond-with-a-child-"
            rel="noreferrer noopener"
            target="_blank"
          />,
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
        }
      }
      i18nKey="pages.claimsStatus.infoAlertBody"
      tOptions={
        Object {
          "context": "bonding",
        }
      }
    />
  </Alert>
  <BackButton
    href="/applications"
    label="Back to your applications"
  />
  <div
    className="measure-6"
  >
    <Title
      small={true}
      weight="normal"
    >
      Application details
    </Title>
    <Heading
      level="2"
      size="1"
    >
      Leave Reason
    </Heading>
    <div
      className="display-flex border-base-lighter margin-bottom-3 bg-base-lightest padding-2"
    >
      <div
        className="padding-right-10"
      >
        <Heading
          level="2"
          size="4"
          weight="normal"
        >
          Application ID
        </Heading>
        <p
          className="text-bold"
        >
          Fineos-Absence-ID
        </p>
      </div>
      <div>
        <Heading
          level="2"
          size="4"
          weight="normal"
        >
          Employer Identification Number (EIN)
        </Heading>
        <p
          className="text-bold"
        >
          123456789
        </p>
      </div>
    </div>
    <LeaveDetails
      absenceDetails={
        Object {
          "Child Bonding": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002026",
              "period_type": "Reduced",
              "reason": "Child Bonding",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Denied",
            },
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002326",
              "period_type": "Continuous",
              "reason": "Child Bonding",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Withdrawn",
            },
          ],
          "Serious Health Condition - Employee": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-06-08",
              "absence_period_start_date": "2021-06-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002026",
              "period_type": "Reduced",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Approved",
            },
            AbsencePeriod {
              "absence_period_end_date": "2021-07-08",
              "absence_period_start_date": "2021-07-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002326",
              "period_type": "Continuous",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Pending",
            },
          ],
        }
      }
    />
    <ViewYourNotices />
    <div
      className="border-top border-base-lighter padding-top-2"
    >
      <Heading
        level="2"
      >
        Upload Documents
      </Heading>
      <Heading
        level="3"
      >
        Respond to requests for information
      </Heading>
      <p>
        If you have a request for more information, use this to upload the requested documentation.
      </p>
      <ButtonLink
        className="measure-6 margin-bottom-3"
        href="/applications/upload-docs-options?claim_id=65184a9e-f938-40b6-b0f6-25f416a4c113"
      >
        Upload additional documents
      </ButtonLink>
    </div>
    <div
      className="border-top border-base-lighter padding-top-2"
    >
      <Heading
        level="2"
      >
        Manage your application
      </Heading>
      <Heading
        level="3"
      >
        Make changes to your application
      </Heading>
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344‑7365"
            />,
          }
        }
        i18nKey="pages.claimsStatus.makeChangesBody"
      />
      <Heading
        level="3"
      >
        Report other benefits or income
      </Heading>
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344‑7365"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsStatus.reportOtherBenefitsBody"
      />
    </div>
  </div>
</Fragment>
`;
